# webskills

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  dist-workspace.toml  skills-lock.json
.agents/skills/agent/: SKILL.md
.github/workflows/: ci.yml  release.yml
skills/webskills/: SKILL.md
src/: lib.rs  main.rs
tests/fixtures/: expected_skill_output.md  no_instructions.md  source_markdown.md
