[package]
name = "webskills"
version = "0.0.1"
edition = "2021"
description = "Generate and install agent skills from websites."
license = "MIT"
repository = "https://github.com/kstonekuan/webskills"

[lib]
name = "webskills_core"
path = "src/lib.rs"

[[bin]]
name = "webskills"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dom_smoothie = "0.15.0"
html2md = "0.2.15"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "rustls",
] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
url = "2.5.8"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
missing_panics_doc = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
